welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: ')' expected but $XMLSTART$< found.
	if (!bOk && a < b && b <c ) { return true}
                               ^inOrder:5: error: illegal start of simple expression
}
^